Sections 35-36 für MABchen.

--- a/tex/bib/thought.bib
+++ b/tex/bib/thought.bib
@@ -307,7 +307,7 @@
 }
 
 @article { yavorski1932kamennougolnye,
-  author = {В. И.  Яворский and Л. К.  Радугина},
+  author = {В. И. Яворский and Л. К. Радугина},
   title = {Каменноугольные пожары в Кузнецком бассейне и связанные с ними
 	явления},
   journal = {Горный журнал},
@@ -501,4 +501,25 @@
   url =		{http://books.google.com/books?id=FVgbAAAAIAAJ},
   urldate =	{2013-02-22},
   language =	{french},
+}
+
+@book { oersted1920discovery,
+  title =	{The Discovery of Electromagnetism Made in the Year 1820},
+  author =	{Hans Christian Oersted and Larson, A.},
+  url =		{http://books.google.com/books?id=1A82AQAAMAAJ},
+  urldate =	{2013-03-01},
+  year =	{1920},
+  location =	{Copenhagen},
+  publisher =	{H. H. Thieles bogtrykkeri}
+}
+
+@book { alibert1801eloge,
+  title =	{Eloge historique de Louis Galvani},
+  author =	{Jean-Louis Alibert},
+  editor =	{Louis Ravier and Charles-François Caille and Richard},
+  year =	{1801},
+  url =		{http://www.sudoc.fr/055375979},
+  urldate =	{2013-03-01},
+  location =	{Paris},
+  languange =	{french},
 }
