--- a/tex/chapter-01.tex
+++ b/tex/chapter-01.tex
@@ -93,7 +93,7 @@ Calcutta.\footnoteRus{Института Бозе в Калькутте}\footnot
 	Chandra Bose\footnoteRus{Бозе Джегдиш Чандра} (1858--1937) in 1917.
 	The institute studied the problems of physics, biophysics, inorganic
 	and organic chemistry, biochemistry, the physiology of plants,
-	selection, microbiology, etc. [---Ed.]
+	selection, microbiology, etc. \parenNoteAuth{Ed.}
 } They are not characteristic of, but are weakly expressed in inert natural
 bodies, are strongly manifested in living ones, but are common to both.
 
@@ -108,13 +108,14 @@ natural bodies, of \emph{living matter}.
 
 To avoid any misunderstanding, I shall avoid the concepts `life', and `living'
 in all further exposition, since, if we proceeded from those
-[phenomena],\footnoteTransl{inserted by transl. [---Pav]} we would inevitably
-go beyond the limits of the phenomena of life studied in science, into a
-foreign area or science---the area of philosophy, or, as is taking place in the
-Bose Institute, into a new area of new material-energetic manifestations common
-to all natural bodies of the biosphere, one lying outside the bounds of the
-fundamental question of living organism, and living matter, which we are
-presently interested in.
+[phenomena],\footnoteTransl{%
+	inserted by transl. \parenNoteAuth{Pav}
+} we would inevitably go beyond the limits of the phenomena of life studied in
+science, into a foreign area or science---the area of philosophy, or, as is
+taking place in the Bose Institute, into a new area of new material-energetic
+manifestations common to all natural bodies of the biosphere, one lying outside
+the bounds of the fundamental question of living organism, and living matter,
+which we are presently interested in.
 
 I shall, therefore, avoid the terms and concepts `life', and `living', and
 limit the area which is subject to our investigation to the concepts
@@ -133,13 +134,16 @@ life.
 % Living matter is in a state of organization, which is determining for the
 % biosphere.  Living matter's cosmic significance, and the constantly
 % increasing extent of the biosphere.
-Man, like every living natural (or naturally-occurring)\footnoteRus{природное
-(или естественное)} body, is inseparably connected with a certain geological
-envelope of our planet---\emph{the biosphere}, clearly distinct from the rest
-of its envelopes, with a structure which is determined by its specific
-\emph{state of organization},\footnoteTransl{организованностью, \ie\ 
-organizedness, or being (constantly) organized. [---Pav]} and occupying a
-lawfully expressible place in it as a distinct part of the whole.
+Man, like every living natural (or naturally-occurring)\footnoteRus{%
+	природное (или естественное)
+} body, is inseparably connected with a certain geological envelope of our
+planet---\emph{the biosphere}, clearly distinct from the rest of its envelopes,
+with a structure which is determined by its specific \emph{state of
+organization},\footnoteTransl{%
+	организованностью, \ie\ organizedness, or being (constantly) organized.
+	\parenNoteAuth{Pav}
+} and occupying a lawfully expressible place in it as a distinct part of the
+whole.
 
 Living matter, just like the biosphere, possesses its peculiar state of
 organization, and can be viewed as a lawfully expressible \emph{function of the
@@ -147,17 +151,18 @@ biosphere.}
 
 \emph{A state of organization} is not a mechanism.  It sharply differs from a
 mechanism in that it is constantly in a state of
-becoming,\footnoteTransl{становлении, \eg\ formation. [---Pav]} of motion of
-all of its smallest material and energetic particles.  We can express this
-state of organization in the course of time---in a generalization of mechanics,
-and in a simplified model---as being such that none of its points (material or
-energetic) lawfully returns to, \altStylePhr{or}\footnoteEd{
+becoming,\footnoteTransl{%
+	становлении, \eg\ formation. \parenNoteAuth{Pav}
+} of motion of all of its smallest material and energetic particles.  We can
+express this state of organization in the course of time---in a generalization
+of mechanics, and in a simplified model---as being such that none of its points
+(material or energetic) lawfully returns to, \altStylePhr{or}\footnoteEd{
 	Phrases like this have been inserted for more familiar reading to
 	today's audience.  Otherwise, Vernadsky's style often includes
 	restating a phrase with a slight change in meaning to communicate an
 	intended range of ambiguity: a style which can be better understood as
 	coming from a living speaker, rather than from a page of reference
-	`facts'.  [---Pav]
+	`facts'.  \parenNoteAuth{Pav}
 } ends up in a place, \altStylePhr{or} a point of the biosphere, which it
 occupied at any earlier moment.  It can return to one of them only on the order
 of mathematical accident, of very small probability.
@@ -198,7 +203,7 @@ been established deeper than $6\,\mathrm{km}$.\footnoteEd{
 	Ocean floor organisms have indeed been observed at all depths of the
 	world ocean, including at greater than $11\,\mathrm{km}$.  (See
 	\foreignlanguage{russian}{\cites{belyaev1966donnaya}{belayev1989glubokovodnye}}.)
-	[---Ed.]
+	\parenNoteAuth{Ed.}
 }  We are just now living through the penetration of mankind, always
 inseparable from other organisms---insects, plants, microbes,---into the
 stratosphere, and by this means living matter has already exceeded
@@ -235,7 +240,7 @@ that precisely this example of the leaves appeared in philosophical folklore
 centuries earlier.\footnote{
 	See, for example, \cite[кн.~2,
 	с.~54]{carus1913prirode}\nocite{carus1936prirode, carus1851nature}.
-	(\Eg, \cite[book~2]{carus1851nature}. ---Pav)
+	(\Eg, \cite[book~2]{carus1851nature}. \noteAuth{Pav})
 }
 
 This is manifested for us in everyday life in [individual]
@@ -414,9 +419,10 @@ physiological structure noticeably for us for hundreds of millions of years, up
 to five hundred million and more, over myriads of generations.  These are the
 so-called \emph{persistents}\footnoteRus{
 	персистенты.  These seem to be popularly known as \emph{living fossils}
-	today. [---Pav]
+	today. \parenNoteAuth{Pav}
 }\fncomma\footnoteEd{
-	persistents\dots\ See \cite[269]{vernadsky1965himicheskoe}. [---Ed.]
+	persistents\dots\ See \cite[269]{vernadsky1965himicheskoe}.
+	\parenNoteAuth{Ed.}
 }---a phenomenon in biology which has been, unfortunately, extremely little
 studied.  Nevertheless, we observe in them, as a phenomenon common to living
 matter, a \emph{plastic evolutionary} process, for which there is not even a
@@ -438,10 +444,11 @@ and biogenic bodies, which play a major role in the biosphere---to soils, to
 surface and underground waters (in seas, lakes, rivers, etc.), to coal,
 bitumen, limestones, organogenic ores, and so forth.  The soils and rivers of
 the Devonian, for example, are different from the soils [and
-rivers]\footnoteTransl{Interpolated from the implied meaning. [---Pav]} of the
-Tertiery, and of our period.  This is an area of new phenomena, hardly taken
-into account by scientific thought.  \emph{The evolution of species turns into
-an evolution of the biosphere.}
+rivers]\footnoteTransl{
+	Interpolated from the implied meaning. \parenNoteAuth{Pav}
+} of the Tertiery, and of our period.  This is an area of new phenomena, hardly
+taken into account by scientific thought.  \emph{The evolution of species turns
+into an evolution of the biosphere.}
 
 
 \Section \label{sec:9}% 9
@@ -564,7 +571,7 @@ observed.\footnoteEd{
 	processes of photosynthesis.  [See \cite{budyko1974klimat}] Apparently,
 	``most important, and great changes in the structure of living matter''
 	were created in these periods, \ie\ they were `critical' in the sense
-	in which V.~I.\ Vernadsky used this word.  [---Ed.]
+	in which V.~I.\ Vernadsky used this word.  \parenNoteAuth{Ed.}
 }  The evolutionary process coincides in its intensification, in its greatest
 changes with these periods.  Most important and great changes in the structure
 of living matter, which are a clear expression of the depth of the geological
@@ -611,7 +618,7 @@ organisms, or [in] the Paleocene, when the fauna of mammals grew.\footnoteEd{
 	evolutionary development of this class of vertebrates began after the
 	dying out of the dinosaurs in the Paleocene, by which the boundary
 	between the Cretaceous and the Paleogene in the history of the Earth is
-	determined to a large degree. [---Ed.]
+	determined to a large degree. \parenNoteAuth{Ed.}
 }  We must not fail to keep in mind that the time we are living through
 corresponds, geologically, to such a critical period, since the ice age has
 % FIXME: Does Vernadsky mean an ice age cycle, rather than just an ice age by
@@ -748,7 +755,7 @@ dissonance.\footnoteEd{
 	shown by the work with radioactive determination of the age of the
 	rocks of the early Precambrian.  Biological evolution is strongly
 	distinguished by a different rate of development
-	(\cite{yanshin1988evolyuciya}).  [---Ed]
+	(\cite{yanshin1988evolyuciya}).  \parenNoteAuth{Ed.}
 }
 
 The growth of scientific thought, closely connected with the growth of man's
@@ -797,3 +804,4 @@ encompass them by new empirical generalizations.\footnote{
 	The rapid change in our knowledge thanks to archeological excavations
 	allows us to hope for very great changes in the near future.
 }
+
