--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -410,7 +410,7 @@ This means---the introduction of scientific discoveries, foreign to \emph{the
 scientific searches of the individual personality}, to which life gives rise
 everywhere, and their incorporation into the organized manifestation of the
 scientific work of scientists, the scientific apparatus of a given
-time,---however, is not the only means by which the environment of life impacts
+time,---however, is not the only means by which the living environment impacts
 science.
 
 This, in and of itself collective, \altStylePhr{and,} from a scientific point
@@ -434,8 +434,12 @@ occurred in economic life, in agriculture, or in individual manifestations of
 success in everyday life, like, for example, the introduction of the camel
 (dromedary) in the desert and semidesert areas of Northern Africa,\footnote{%
 	\cite[p.~178]{julien1931histoire}.  See
-	\cite{gsell1926memoires}; \cite[p.~181]{gautier1927siecles} for
-	the significance of this phenomenon.
+	\cite{gsell1926memoires};\footnoteTransl{%
+		According to Wikipedia[!] the Académie des Inscriptions et
+		Belles-Lettres was founded by Jean-Baptiste Colbert, and Jean
+		Sylvain Bailly was its member.
+	} \cite[p.~181]{gautier1927siecles} for the significance of this
+	phenomenon.
 } and the discovery of printing in the Rhenish countries in Europe.\footnote{%
 	We must never forget that the printing press was discovered in Korea a
 	few centuries before Coster and Gutenberg, and was widely used in the
@@ -444,11 +448,78 @@ success in everyday life, like, for example, the introduction of the camel
 	China at the time.
 }
 
-. . .
+Along with these tempestuous phenomena, whose consequences for scientific
+thought were not considered at their creation by mankind, to an equal, and
+sometimes, perhaps, greater degree, scientific thought itself---the scientific
+discoveries of individual thinkers and scientists, which change mankind's
+world-view, like Copernicus, Newton, Linnaeus, Darwin, Pasteur, P.\ Curie---is
+acting in the biosphere.  In some cases this was done consciously, in
+others---unexpectedly for the scientist oneself, as occurred before our
+eyes with A.\ Becquerel [1852--1908], discovering radioactivity in
+1896,\footnote{%
+	Becquerel himself thought that he took up Uranium only because it was
+	studied by his father and grandfather (\autoref{sec:55}).
+} or with H.\ Ørsted [1777--1851], detecting electromagnetism,\footnote{%
+	Ørsted discovered electromagnetism in 1820.
+	(\cite{oersted1920discovery}.)
+} or with L.\ Galvani [1737--1798], discovering the galvanic
+current.\footnote{%
+	The phenomenon discovered by Galvani was correctly explained by Volta.
+	Galvani's explanation was incorrect, but ``galvanism,'' with
+	incalculable consequences before the study of electricity, was
+	discovered by him.  (See \cite{alibert1801eloge} about him.)
+}
+
+Maxwell, Lavoisier, Ampere, Faraday, Darwin, Dokuchaev, Mendeleev and many
+others encompassed great scientific revelations, worked creatively to bring
+them into being in full consciousness of their fundamental significance for
+life, but unexpected for their contemporaries.\footnote{%
+	It is interesting that the significance of these discoveries in their
+	application to life was admitted decades after the deaths of Maxwell,
+	Lavoisier, Faraday, Mendeleev, \altStylePhr{and} Ampere.
+}
+
+Their thought---consciously for them---influenced the thick of life; here the
+applied creations arising in this way, in a new form, unexpectedly and
+unsurmisedly for their contemporaries, often after the deaths of their
+creators, were reflected anew in scientific work, overturned mankind's everyday
+life, \altStylePhr{and} created new, unexpected sources of scientific
+knowledge.
+
+Along with them, in the same way, through the thick of life, through the
+environment, inventors, among them, often, people with little scientific
+literacy---from all social classes and circles, often people having no
+connection with or interest in the search for scientific truth,---are creating
+a new, analogous cycle of scientific problems.\footnote{%
+	R.\ Arkwright\dots\ [Arkwright, Richard (1732--1792)---English
+	mechanic, inventor of the spinning frame. \noteAuth{Ed.}]; Zénobe
+	Théophile Gramme\dots\ [Gramme (1826--1901)---Belgian electrical
+	engineer, one of the inventors of the dynamo. \noteAuth{Ed.}]
+}
+
 
 \Section % 36
+From everything said so far we can see that \emph{it is possible to make}
+conclusions of great scientific significance, namely:
+\begin{enumerate}
+  \item The course of scientific work is that force by which man changes the
+  	biosphere in which he lives.
+  \item This manifestation of the biosphere's changing is an inevitable,
+  	concomitant phenomenon to the growth of scientific thought.
+  \item This change of the biosphere occurs independently of human will,
+  	tempestuously, as a naturally-occurring phenomenon.
+  \item And since the environment of life is an organized envelope of the
+  	planet---the biosphere,---the introduction, in the course of its
+	geologically long existence, of a new factor of change---the scientific
+	work of mankind---in it is the natural process of the transition of the
+	biosphere into a new phase, into a new state---into the noosphere.
+  \item We can see this more clearly in the historical moment we are living
+  	through than could be seen earlier.  ``Nature's law'' is being revealed
+	before us now.  New sciences---geochemistry and biogeochemistry---are
+	making the expression of a few important characteristics of the process
+	mathematically possible.
+\end{enumerate}
 
-. . .
 
 \Section % 37
 
