--- a/tex/chapter-07.tex
+++ b/tex/chapter-07.tex
@@ -112,7 +112,7 @@ energy\footnote{
 		  vernadsky1926multiplication2}};
 	  \item \foreignlanguage{russian}{\cite{vernadsky1927bakteriofag}}.
 	\end{itemize}
-	[Ed.:] For the R.~Rosethal fund's report
+	\parenNoteAuthPfx{Ed.} For the R.~Rosethal fund's report
 	\foreignlanguage{russian}{\rtitle{Живое вещество в биосфере}} see:
 	\foreignlanguage{russian}{\cite[555--602]{vernadsky1994zhivoe}}
 }---encompasses the whole biosphere and generally determines all of its
@@ -365,7 +365,7 @@ The following data may have significance for us in that aspect.
 The number of people in the Paleolithic likely reached a few million.  It is
 possible that it began with one family.  However, the opposite view is also
 possible.\footnote{See E.~Le Roy. [The author's note has not been found.
----Ed.]}
+\noteAuth{Ed.}]}
 
 In the Neolithic we are likely dealing with tens of millions on the whole
 surface of the Earth.  It is possible that even in historical time it did not
