--- a/tex/chapter-10.tex
+++ b/tex/chapter-10.tex
@@ -7,13 +7,14 @@ are also detrimental to philosophy.
 
 The expectant attitude of the naturalist for the confirmation of philosophy
 creates among philosophers the impression that precisely the
-scientists\footnoteTransl{probably a typo, and should be: ``exact scientists''
-[---Pav]}, proceeding from their data, accept the basic tenets of the
-philosophical current of materialism about the lack of fundamental difference
-between living and inert.  Vitalistic notions have remained so far in the past
-in the general course of biological thought that their real significance hardly
-influences large-scale work.  The overbearing majority of naturalists are far
-from them.
+scientists\footnoteTransl{
+	probably a typo, and should be: ``exact scientists''
+	\parenNoteAuth{Pav}
+}, proceeding from their data, accept the basic tenets of the philosophical
+current of materialism about the lack of fundamental difference between living
+and inert.  Vitalistic notions have remained so far in the past in the general
+course of biological thought that their real significance hardly influences
+large-scale work.  The overbearing majority of naturalists are far from them.
 
 The philosophers-naturalists, whose significance in contemporary philosophical
 thought, in its global scope, is minute, receive [from the exact scientists]
