--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -277,7 +277,7 @@ form of his organization.
 The question of the better organization of life and of the means by which
 it could be accomplished has been raised numerous times during the
 multi-thousand-year historical tragedy full of blood, suffering, crime,
-destitution, hardship, which we call world history.  Man did not accept the
+destitution, hardship, which we call world history.  Man has not accepted the
 conditions of his life.
 
 The exit from these searches has been resolved differently, and we can see
@@ -294,10 +294,27 @@ goodness.  In general, innumerable philosophical and religious attempts during
 the course of millenia have not reached a unified explanation.
 
 All solutions reached in such a way transfer and have transferred the question
-in a different plane---from the domain of heard reality into the domain of
-ideal constructs.
+in a different plane---from the domain of brutal reality, into the domain of
+ideal constructs. Various forms of countless religious-philosophcal solutions,
+which are indeed related to the notion of individual immortality, in one or
+another form, in the literal meaning of the word, or in its future resurrection
+in new conditions, where evil, suffering and disasters would not exist, or
+where these would be distributed justly, have been found.  The notion of
+metempsychosis, solving the question not from a personal standpoint, but from
+the standpoint of all living matter, is the deepest.  It, having emerged a few
+millenia ago, is still alive and vivid for many hundreds of millions of people
+to this day.  And there is, perhaps, nothing it contradicts contemporary
+scientific notions in.  The course of scientifc thought has nowhere run up
+against the conclusions from this notion.
 
-. . .
+All of these notions---with all of their distance, sometimes, from precise
+scientific knowledge---are a powerful social factor over the course of
+millenia, strongly reflected in the process of the evolution of the biosphere
+into the noosphere, far from being, however, decisive, or somehow distinguished
+from other factors in its creation at the same time.  In the course of tens of
+thousands of years, they have, in this aspect, sometimes played the main role,
+have sometimes disappeared among others, have moved into the background, could
+have been left neglected.
 
 
 \Section % 19
