--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -432,4 +432,13 @@ science and philosophy, on the future of mankind.  It can be characterized as
 an impressive, though unfinished, synthesis of the ideas being developed by the
 scientist in the last period of his life.
 
+Deep thoughts about the evolution of mankind on geological and socio-historical
+scales of time are contained in the book.  It must be admitted that this is the
+first attempt in world literature to generalize the evolution of our planet as
+a single cosmic, geological, biogenic, and anthropogenic process.  The leading
+transformative role of science and the socially organized labor of mankind in
+the present and future of the planet is revealed in the work.  Scientific
+thought, science is viewed and analyzed as the most important force of
+transformation and evolution of the planet.
+
 . . .
