--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -318,8 +318,33 @@ have been left neglected.
 
 
 \Section % 19
+Because this same historical process of world history is reflected in the
+nature surrounding man in another way[;]\footnoteTransl{%
+	The source Russian version has a full stop here.%
+} it is possible and necessary to approach it purely scientifically, leaving
+aside any notions which do not result from scientific facts.
 
-. . .
+Archeologists, geologists, and biologists are now having such an approach to
+the study of world history, leaving without consideration of any of the
+millenia-old notions of philosophy and religion, not taking them into account,
+creating a new scientific understanding of the historical process of man's
+life.  Geologists, deepening the study of the history of our planet, of the
+Pleistocene, of the Ice Age, have collected a vast amount of scientific facts,
+manifesting the reflection of the life of human societies---in the end, of
+civilized mankind---on the geological processes of our planet, in fact, of the
+biosphere.  Without its evaluation from the standpoint of good and evil,
+without regard for the ethical or philosophical aspect, scientific work,
+scientific thought is establishing a new fact of primary geological
+significance in the history of the planet.  This fact consists of the detection
+of a new\emph{ Psychozoic }or\emph{ Anthropogenic geological Age, } created by
+the historical process.  In fact, it is defined planetologically by the
+emergence of mankind.
+
+None of the countless---geological, philosophical, or religious---notions of the
+significance of mankind, and the significance of human history play any
+[significant] role in this scientific generalization.  They can be left aside
+without any concerns.  Science does not have to take them into account.
+
 
 \Section % 20
 
