--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -441,4 +441,12 @@ the present and future of the planet is revealed in the work.  Scientific
 thought, science is viewed and analyzed as the most important force of
 transformation and evolution of the planet.
 
+We must not fail to note that the book offered to the reader's attention has
+also a deeply philosophical content.  V.\ I.\ Vernadsky was not simply
+intrested in philosophy, but studied the works of philosophers of various
+schools and currents thoroughly since his teenage years.  He considered the
+collection and generalization of scientific facts as inseparable from the
+philosophical understanding of the reached scientific conclusions, which is
+especially distincly evident from his diaries and his correspondence.
+
 . . .
