--- a/tex/bib/vernadsky.bib
+++ b/tex/bib/vernadsky.bib
@@ -604,6 +604,28 @@
   hyphenation = {russian},
 }
 
+@book { vernadsky1988trudy,
+  title =	{Труды по всеобщей истории науки},
+  author =	{Владимир Иванович Вернадский},
+  edition =	{2-е изд.},
+  location =	{Москва},
+  publisher =	{Наука},
+  year =	{1988},
+  pages =	{336},
+  language =	{russian},
+  hyphenation =	{russian},
+  url =		{http://vernadsky.name/wp-content/uploads/2013/01/trudi-po-vseobshei-istorii-nauki.pdf},
+  urldate =	{2013-05-05},
+  isbn =	{5-02-003324-3},
+}
+
+@inbook { vernadsky1988trudy-p21,
+  crossref =	{vernadsky1988trudy},
+  title =	{В. И. Вернадский как историк науки},
+  author =	{С. Р. Микулинский},
+  pages =	{21},
+}
+
 @article { vernadsky1991dnevnik1938,
   author =	 {Владимир Иванович Вернадский},
   title = 	 {Дневник 1938 г.},
