--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -347,8 +347,42 @@ without any concerns.  Science does not have to take them into account.
 
 
 \Section % 20
+Approaching the analysis of this scientific generalization, we should note that
+its duration can be estimated as millions of years, while the historical
+process of human societies encompasses a few decamyriads, hundreds of thousands
+of years, of it.
 
-. . .
+It is necessary, most of all, to stress a few preconditions, which determine
+this generalization.
+
+First, is \emph{the unity and equality, in essence, in principle, of all
+people}, of all races.  This is expressed biologically in the detection of all
+people in the geological process \emph{as a unified whole} with respect to the
+rest of the living population of the planet.
+
+And this is despite the possibility, and, even, probability of the emergence of
+the different human races from different species of the genus \lphr{Homo}.
+This difference likely does not reach deeper, to the various animal
+predecessors of the genus \lphr{Homo}.  We cannot, however, deny it.  Such
+unity with respect to all other life has been, in general, maintained
+throughout all of world history, even though it was absent, or almost absent at
+times, and in places in special cases.  We are encountering such manifestations
+still today, but the general tempestuous process is not changed by this.
+
+The geological significance of mankind was manifested for the first time in
+connection with this.  Apparently, already hundreds of millenia ago, when man
+acquired control over fire and began making the first instruments, he laid the
+foundation of his advantage over the higher animals, the fight with which
+occupied a major part of his history, and was, theoretically, finally ended a
+few centuries ago with the discovery of firearms.  Man must take special care
+in the 20\textsuperscript{th}$\;$c.\ not to allow the extinction of all
+animals---large mammals and reptiles,---which he would like to preserve because
+of some or other considerations.  Many tens of millenia earlier, however, close
+to his emergence, he was that force, new on our planet, which occupied an
+important place along with other earlier species, in bringing the extinction of
+species of large animals.  It is quite possible that he did not differ much
+from numerous other gregarious predators at that time.
+
 
 \Section % 21
 
