--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -449,4 +449,25 @@ collection and generalization of scientific facts as inseparable from the
 philosophical understanding of the reached scientific conclusions, which is
 especially distincly evident from his diaries and his correspondence.
 
+Already in 1902, beginning his work on the history of the development of human
+culture, he wrote to his wife Natalya Egorovna: ``I view the significance of
+philosophy in the development of human knowledge entirely differently from the
+majority of naturalists, and ascribe an enormous, fruitful signicance to it.
+It seems to me that these are two sides of the same process---completely
+unavoidable and inseparable sides.  They are separated only in our minds.  Were
+one of them to die away, the living growth of the other would cease\dots{}
+Philosophy always concludes \emph{germs, }sometimes even anticipates whole
+areas of the future development of science, and, only thanks to the
+simultaneous work of the human mind in this area as well, correct criticism of
+the unavoidably over-simplified notions of science is produced.  Such
+significance of philosophy, as the roots and vital atmosphere of scientific
+endeavor, can be precisely and clearly traced in the history of the development
+of scientific thought.''\footcite{vernadsky1988trudy-p21}
+
+V.\ I.\ Vernadsky stayed true to the principle presented in this letter his
+whole life.  Statements with similar meaning can be found in numerous other
+letters and works of his, especially in the many publications on the history of
+scientific knowledge.  All of them are permeated by philosophical
+conceptualizations of the presented material.
+
 . . .
