Started working on Sec. 21.

--- a/tex/bib/thought.bib
+++ b/tex/bib/thought.bib
@@ -66,7 +66,7 @@
 	ископаемого человека},
   author = {Алексей Петрович Павлов},
   year = 1936,
-  publisher = {Академии наук СССР},
+  publisher = {Академия наук СССР},
   lccn={50048114},
   url = {http://books.google.com/books?id=OaTpHAAACAAJ},
   language = {russian},
@@ -522,4 +522,52 @@
   urldate =	{2013-03-01},
   location =	{Paris},
   languange =	{french},
+}
+
+@article { deborin1932problema,
+  title =	{Проблема времени в освещении акад. Вернадского},
+  author =	{Абрам Моисеевич Деборин},
+  journal =	{Известия Академии наук СССР},
+  publisher =	{Академия наук СССР},
+  series =	{7},
+  number =	{4},
+  year =	{1932},
+  pages =	{543-569},
+  url =		{http://e-heritage.ru/ras/view/publication/general.html?id=46669387},
+  urldate =	{2013-07-07},
+  langugage =	{russian},
+  hyphenation =	{russian},
+}
+
+@book { marx2010capital-v1,
+  author =	{Karl Marx},
+  title =	{Capital},
+  volume =	{1},
+  year =	{2010},
+  url =		{http://www.marxists.org/archive/marx/works/1867-c1/index.htm},
+  urldate =	{2013-07-07},
+  language =	{english},
+  hyphenation =	{english},
+}
+
+@book { marx2007capital-v2,
+  author =	{Karl Marx},
+  title =	{Capital},
+  volume =	{2},
+  year =	{2007},
+  url =		{http://www.marxists.org/archive/marx/works/1885-c2/index.htm},
+  urldate =	{2013-07-07},
+  language =	{english},
+  hyphenation =	{english},
+}
+
+@book { marx2010capital-v3,
+  author =	{Karl Marx},
+  title =	{Capital},
+  volume =	{3},
+  year =	{2010},
+  url =		{http://www.marxists.org/archive/marx/works/1894-c3/index.htm},
+  urldate =	{2013-07-07},
+  language =	{english},
+  hyphenation =	{english},
 }
