--- a/tex/bib/vernadsky.bib
+++ b/tex/bib/vernadsky.bib
@@ -350,6 +350,21 @@
   urldate =	{2012-07-29},
 }
 
+@article { vernadsky1933povodu,
+  author =	{Владимир Иванович Вернадский},
+  title =	{По поводу критических замечаний акад. А.М. Деборина},
+  journal =	{Известия Академии наук СССР},
+  publisher =	{Академия наук СССР},
+  series =	{7},
+  number =	{3},
+  year =	{1933},
+  pages =	{395-407},
+  url =		{http://nasledie.enip.ras.ru/ras/view/publication/general.html?id=46591586},
+  urldate =	{2013-07-07},
+  langugage =	{russian},
+  hyphenation =	{russian},
+}
+
 @mvbook { vernadsky1934istoriya-v2p1-2,
   author =	{Владимир Иванович Вернадский},
   maintitle =	{История минералов земной коры},
