--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -385,6 +385,23 @@ from numerous other gregarious predators at that time.
 
 
 \Section % 21
+Much more important, from a geological point of view, was another shift, slowly
+taking place tens of thousands of years ago---the domestication of herd animals
+and the cultivation of cultured plant races.  Man started changind the living
+world around him, and creating for himself a new, previously non-existent
+living nature by this means.  The great significance of this was manifested in
+another way---in the fact that he saved himself from hunger in a new way, known
+to only a limited degree among animals,---the conscious, creative safeguard
+against hunger---and, consequently, created the possibility for his unlimited
+reproduction.
+
+At that time, perhaps, ten--twenty thousand years ago, thanks to this
+possibility, the possibility for the formation of large settlements (towns and
+villages), and, consequently, the possibility for the formation of government
+structures, completely essentially different from those special forms which
+arise from blood relations, was first established.  The idea of the unity of
+mankind received here in reality, although, obviously, unconsciously, even
+greater possibilities for its development.
 
 . . .
 
