--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -470,4 +470,25 @@ letters and works of his, especially in the many publications on the history of
 scientific knowledge.  All of them are permeated by philosophical
 conceptualizations of the presented material.
 
+However, we, it seems, unexpectedly encounter different statements of
+V.\ I.\ Vernadsky's, which separate philosophy from scientific knowledge, and
+even mention it alongside religion, in works, letters, and diaries from the
+30s.  In order to understand this, it is necessary to take into account that in
+the given case we are talking about the dominant in those years philosophy of
+vulgar dialectical materialism, ordering not only the representatives of the
+social sciences, but also natural scientists what conclusions and inferences to
+make, in order for them to completely correspond to the philosophical ``laws''.
+V.\ I.\ Vernadsky could not accept such a philosophy, for which he was
+criticized by A.\ M.\ Deborin, who accused him of
+idealism.\footnote{\cite{deborin1932problema}}  V.\ I.\ Vernadsky responded to
+this criticism with great dignity, even though it painfully wounded his
+pride.\footnote{\cite{vernadsky1933povodu}}  He always thought that an unbiased
+collection of as many facts about the topic of investigation as possible, their
+subsequent objective generalization, and, only afterward, a philosophical
+understanding must be the basis for every investigation.  By the way,
+V.\ I.\ Vernadsky regarded Karl Marx as a scientist with great respect
+precisely because a great amount of thoroughly and conscientiously collected
+material lay at the foundation of the
+\btcite{marx2010capital-v1}\nocite{marx2007capital-v2,marx2010capital-v3}.
+
 . . .
